# data-forced

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  data-elevator-forced.cabal  data-forced.cabal  default.nix  flake.nix
src/Data/: Forced.hs  ForcedOld.hs
src/Data/Elevator/: Forced.hs
test/: Main.hs
