cabal-version:      3.4
name:               data-elevator-forced
version:            0.1.0.0
synopsis:           Specify that lifted values were forces to WHNF or NF.
-- description:
license:            MIT
license-file:       LICENSE
author:             Ruben Astudillo
maintainer:         ruben.astud@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Elevator.Forced
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      data-elevator ^>=0.1.0.1,
                      nothunks,
                      deepseq >= 1.4.6.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite data-elevator-forced-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        nothunks,
        HUnit,
        data-elevator,
        data-elevator-forced
